<resources>
    <string name="app_name">IntentVidya</string>
    <string name="move_activity">PINDAH ACTIVITY</string>
    <string name="back_activity">KEMBALI KEHALAMAN UTAMA</string>
    <string name="move_with_data">PIDAH ACTIVITY DENGAN DATA</string>
    <string name="dial_number">PANGGIL TELEPON</string>
    <string name="move_with_result">PINDAH ACTIVITY UNTUK RESULT</string>
    <string name="result_from_activity">HASIL DARI ACTIVITY</string>
    <string name="choose_color">PILIH WARNA YANG KAMU SUKA</string>
    <string name="_blue">BIRU</string>
    <string name="_yellow">KUNING</string>
    <string name="_red">MERAH</string>
    <string name="choose">PILIH</string>
    <string name="choose_food">PILIH MAKANAN YANG ANDA SUKA</string>
    <string name="_stik">STEAK N SHAKE</string>
    <string name="_bakso">BAKSO</string>
    <string name="__chicken">AYAM CRISPY</string>
    <string name="data_received">DATA DITERIMA</string>
    <string name="this_ismove_activity">INI PINDAH ACTIVITY</string>
</resources>
