<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MoveForResultActivity"
        android:orientation="vertical">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_food"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:textSize="20sp"
            android:gravity="center"/>

    <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rg_food"
            android:orientation="vertical">
        <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rb_stik"
                android:text="@string/_stik"
                android:layout_marginBottom="@dimen/activity_vertical_margin"/>
        <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rb_bakso"
                android:text="@string/_bakso"
                android:layout_marginBottom="@dimen/activity_vertical_margin"/>
        <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rb_chicken"
                android:text="@string/__chicken"
                android:layout_marginBottom="@dimen/activity_vertical_margin"/>
    </RadioGroup>

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_choose"
            android:text="@string/choose"/>

</LinearLayout>